--- a/STYLE.CSS
+++ b/STYLE.CSS
@@ -1,7 +1,10 @@
 .option-container {
     width: 500px;
-    height: 50px;
+    height: 60px;
+    margin: 30px 0;
     background-color: darkgrey;
+    display: flex;
+    align-items: center;
 }
 
 .destroyer {
