--- a/STYLE.CSS
+++ b/STYLE.CSS
@@ -79,3 +79,15 @@
     height: 10px;
     margin: 3px;
 }
+
+.hover {
+    background-color: darkgray;
+}
+
+.boom {
+    background-color: red;
+}
+
+.empty {
+    background-color: gray;
+}
